fix: various text & layout issues
* fix: Options page placeholder and error message

* fix: Popup placeholders and error message

* fix: Start test error layout

* fix: Widget hints and messages

* fix: Remove line breaks

* fix: Update error messages and placeholders

* fix: "Hide Widget" button - uppercase "w"

--- a/src/forms/fields/error-message/error-message.module.scss
+++ b/src/forms/fields/error-message/error-message.module.scss
@@ -3,7 +3,7 @@
 .error-message {
   color: map-get($color-palette, red100);
   font-size: 12px;
-  line-height: 24px;
+  line-height: 20px;
 
   &::first-letter {
     text-transform: uppercase;
